--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Geo, Notification, Media hometask",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
+    "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
     "lint": "eslint .",
     "fix": "eslint . --fix",
